# pipeconcord

./: .gitignore  LICENSE  README.md  mkdocs.yml  pyproject.toml
.github/workflows/: docs.yml  publish-pypi.yml  test.yml
biocompare/: __init__.py  __main__.py  cli.py
biocompare/comparators/: __init__.py  bam_stats.py  base.py  bed.py  counts.py  deg.py  fasta.py  table.py  vcf.py
biocompare/core/: __init__.py  batch.py  engine.py  registry.py  report.py  utils.py
biocompare/detection/: __init__.py  dispatch.py  filetype.py
biocompare/io/: __init__.py  report_writers.py
docs/: api.md  design.md  index.md  quickstart.md  writing_comparators.md
docs/tutorials/: compare_peak_callers.md  compare_rnaseq_pipelines.md  compare_variant_callers.md  regression_testing.md
tests/: test_bam_stats_comparator.py  test_batch.py  test_bed_comparator.py  test_cli.py  test_counts_comparator.py  test_deg_comparator.py  test_engine_integration.py  test_fasta_comparator.py  test_filetype.py  test_report_writers.py  test_table_comparator.py  test_vcf_comparator.py
tests/fixtures/: batch_manifest.tsv  calls_a.vcf  calls_b.vcf  counts_a.tsv  counts_b.tsv  degs_tool_a.tsv  degs_tool_b.tsv  flagstat_a.txt  flagstat_b.txt  peaks_a.bed  peaks_b.bed  sequences_a.fa  sequences_b.fa  table_a.tsv  table_b.tsv
